# NotTheNet

./: .bandit  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SERVICES_ARCHITECTURE.md  build-deb.sh  config.json  config.py  docker-compose.yml  fix-launcher.sh  ghost-flare.ps1  harden-lab.sh  install-offline.sh  install.sh  make-bundle.ps1  notthenet-install.sh  notthenet-uninstall.sh  notthenet.py  openapi.yaml  predeploy.ps1  predeploy.sh  prepare-usb.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  service_manager.py  ship.ps1  test_iptc.py  update.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml  sca.yml  scorecard.yml  snyk.yml
application/: __init__.py  config_service.py  health.py  orchestrator.py
assets/: com.retr0verride.notthenet.policy  logo.txt  notthenet-gui-launcher  notthenet-page.html  notthenet.desktop  notthenet.service  prepare-victim.ps1
docs/: configuration.md  development.md  index.md  installation.md  lab-setup-proxmox.md  lab-setup-vbox.md  lab-setup.md  network.md  reliability.md  safe-detonation.md  security-hardening.md  services.md  threat-model.md  troubleshooting.md  usage.md
domain/: __init__.py  exceptions.py
domain/entities/: __init__.py  service_status.py
domain/ports/: __init__.py  config_store.py  event_sink.py  service_repo.py
domain/value_objects/: __init__.py  network.py
gui/: __init__.py  app.py  dialogs.py  logic.py  preflight.py  views.py  widgets.py
infrastructure/: __init__.py  event_sink.py
infrastructure/adapters/: __init__.py  service_repo_adapter.py
infrastructure/config/: __init__.py  env_config.py  settings.py
infrastructure/di/: __init__.py  container.py
infrastructure/health/: __init__.py  server.py
infrastructure/logging/: __init__.py  otel.py  setup.py
infrastructure/resilience/: __init__.py  circuit_breaker.py  retry.py
man/: notthenet.1
network/: iptables_manager.py  tcp_fingerprint.py
scripts/: checks.py
services/: base.py  catch_all.py  cloud_exfil_routes.py  dns_server.py  doh_websocket.py  dot_server.py  dynamic_response.py  ftp_server.py  http_routes.py  http_server.py  icmp_responder.py  irc_server.py  ldap_server.py  mail_server.py  mssql_server.py  mysql_server.py  ntp_server.py  rdp_server.py  redis_server.py  smb_server.py  socks5_server.py  telnet_server.py  tftp_server.py  vnc_server.py
tests/: _irc_debug.py.skip  conftest.py  load_test.py  test_catch_all.py  test_cert_utils.py  test_cloud_exfil.py  test_config.py  test_connection_caps.py  test_dns_server.py  test_ftp_server.py  test_http_server.py  test_iptables_manager.py  test_irc_session_timeout.py  test_json_logger_flush.py  test_kali_fidelity.py  test_logging_utils.py  test_mail_server.py  test_resource_cleanup.py  test_service_manager.py  test_smb_server.py  test_validators.py  test_victim_remote.py
tools/: iptc_diagnostic.py
utils/: cert_utils.py  json_logger.py  logging_utils.py  preflight.py  privilege.py  validators.py  victim_remote.py
windows/: README.md  config.json  launch.bat  launch.ps1  notthenet.py  requirements.txt
windows/application/: __init__.py  health.py  orchestrator.py
windows/domain/entities/: __init__.py  service_status.py
windows/domain/ports/: __init__.py  event_sink.py  service_repo.py
windows/gui/: __init__.py  app.py  widgets.py
windows/infrastructure/: __init__.py  event_sink.py
windows/infrastructure/adapters/: service_repo_adapter.py
windows/infrastructure/config/: env_config.py
windows/infrastructure/di/: container.py
windows/infrastructure/health/: server.py
windows/infrastructure/logging/: setup.py
windows/network/: __init__.py
windows/services/: __init__.py
