[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notthenet"
version = "1.0.0"
description = "Fake internet simulator for malware analysis — INetSim/FakeNet-NG alternative"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["malware-analysis", "sandbox", "fakenet", "inetsim", "dns", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "dnslib==0.9.26",
    "cryptography>=44.0.1",
]

[project.scripts]
notthenet = "notthenet:main"

[project.urls]
"Homepage"       = "https://github.com/retr0verride/NotTheNet"
"Bug Tracker"    = "https://github.com/retr0verride/NotTheNet/issues"
"Security"       = "https://github.com/retr0verride/NotTheNet/security/advisories"

[tool.setuptools]
py-modules = ["notthenet", "config", "service_manager"]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "network*", "utils*"]

# ── Linting / formatting ──────────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "S101",  # assert statements (OK in tests)
    "S603",  # subprocess without shell — we explicitly use shell=False
    "S607",  # partial path for subprocess — we use full paths where possible
    "S104",  # binding to 0.0.0.0 — intentional (fake internet by design)
    "S110",  # try/except/pass — intentional in I/O handlers and log queue
]

[tool.ruff.lint.per-file-ignores]
"notthenet.py" = ["E501"]  # decorative section separators and ASCII-art banner strings
"notthenet-install.sh" = []  # shell, not Python

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["utils.privilege", "network.iptables_manager"]
# Linux-only modules (os.geteuid, os.setuid, grp, pwd) — false positives on Windows
ignore_errors = true

[[tool.mypy.overrides]]
module = ["services.mail_server", "services.ftp_server", "services.catch_all", "services.http_server"]
# Service classes use Optional[X] = None pattern; suppress assignment/attr errors
ignore_errors = true

# ── Security scanning (Bandit) ────────────────────────────────────────────────

[tool.bandit]
exclude_dirs = ["venv", ".venv", ".git", "tests"]
skips = [
    "B104",   # binding to 0.0.0.0 — intentional (fake internet by design)
    "B110",   # try/except/pass — intentional in socket I/O handlers
    "B324",   # hashlib use — not for crypto here
    "B404",   # subprocess import — used safely with shell=False throughout
    "B603",   # subprocess without shell=True — shell=False is the secure pattern
    "B607",   # partial executable path — intentional for cross-env portability
]
