[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notthenet"
version = "2026.04.19-2"
description = "Fake internet simulator for malware analysis — INetSim/FakeNet-NG alternative"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["malware-analysis", "sandbox", "fakenet", "inetsim", "dns", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "dnslib==0.9.26",
    "cryptography>=46.0.6",
    "setproctitle>=1.3",
]

[project.scripts]
notthenet = "notthenet:main"

[project.urls]
"Homepage"       = "https://github.com/retr0verride/NotTheNet"
"Bug Tracker"    = "https://github.com/retr0verride/NotTheNet/issues"
"Security"       = "https://github.com/retr0verride/NotTheNet/security/advisories"
"Changelog"      = "https://github.com/retr0verride/NotTheNet/blob/master/CHANGELOG.md"

# CPE: cpe:2.3:a:retr0verride:notthenet:*:*:*:*:*:python:*:*

[tool.setuptools]
py-modules = ["notthenet", "config", "service_manager"]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "network*", "utils*"]

# ── Linting / formatting ──────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["test_iptc.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "S101",  # assert statements (OK in tests)
    "S603",  # subprocess without shell — we explicitly use shell=False
    "S607",  # partial path for subprocess — we use full paths where possible
    "S104",  # binding to 0.0.0.0 — intentional (fake internet by design)
    "S110",  # try/except/pass — intentional in I/O handlers and log queue
]

[tool.ruff.lint.per-file-ignores]
"notthenet.py" = ["E501"]  # decorative section separators and ASCII-art banner strings
"notthenet-install.sh" = []  # shell, not Python
# Service files: long lines are protocol-data byte strings that cannot be split
"services/catch_all.py" = ["E501"]
"services/http_server.py" = ["E501"]
"services/irc_server.py" = ["E501"]
"services/ldap_server.py" = ["E501"]
"services/mssql_server.py" = ["E501"]
"services/redis_server.py" = ["E501"]
"services/socks5_server.py" = ["E501"]
"services/telnet_server.py" = ["E501"]
"services/tftp_server.py" = ["E501"]
# GUI: long lines are embedded base64 icon data
"gui/views.py" = ["E501"]
# Service files: long lines are protocol-data byte strings or MIME type strings that cannot be split
"services/dynamic_response.py" = ["E501"]
"services/mysql_server.py" = ["E501"]
"services/rdp_server.py" = ["E501"]
"services/smb_server.py" = ["E501"]
"services/vnc_server.py" = ["E501"]
# Tools and preflight: long human-readable diagnostic messages
"tools/load_test.py" = ["E501"]
"utils/preflight.py" = ["E501"]
# Tests: long expected-string assertions
"tests/test_kali_fidelity.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

# ── Strict mode for Clean Architecture layers ───────────────────────────────────
# New code written to Clean Architecture standards must pass --strict.
# Existing service/GUI code is exempt to avoid blocking CI.

[[tool.mypy.overrides]]
module = ["domain.*", "application.*", "infrastructure.*"]
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["utils.privilege", "network.iptables_manager"]
# Linux-only modules (os.geteuid, os.setuid, grp, pwd) — false positives on Windows
ignore_errors = true

[[tool.mypy.overrides]]
# Legacy code outside Clean Architecture layers — un-annotated, exempt from strict checking.
module = [
    "config",
    "service_manager",
    "notthenet",
    "services.*",
    "network.*",
    "utils.*",
    "gui.*",
    "tools.*",
    "tests.*",
]
ignore_errors = true

# ── Security scanning (Bandit) ────────────────────────────────────────────────

[tool.bandit]
exclude_dirs = ["venv", ".venv", ".git", "tests"]
skips = [
    "B101",   # assert_used — used as lightweight runtime guards (not test assertions)
    "B104",   # binding to 0.0.0.0 — intentional (fake internet by design)
    "B105",   # hardcoded_password_string — FTP/protocol response strings, not credentials
    "B110",   # try/except/pass — intentional in socket I/O handlers
    "B324",   # hashlib use — not for crypto here
    "B404",   # subprocess import — used safely with shell=False throughout
    "B603",   # subprocess without shell=True — shell=False is the secure pattern
    "B606",   # os.startfile — intentional to open user's own log file
    "B607",   # partial executable path — intentional for cross-env portability
]

# ── Coverage ──────────────────────────────────────────────────────────────────
# Only measure source code that can realistically be tested in a headless CI
# runner.  GUI (needs display / tkinter), Linux-only privilege helpers, and
# integration-only modules are excluded.

[tool.coverage.run]
source = [
    "config",
    "service_manager",
    "services",
    "network",
    "utils",
]
omit = [
    "utils/preflight.py",
    "utils/privilege.py",
    "utils/victim_remote.py",
]

[tool.coverage.report]
show_missing = true

# ── Test configuration ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
# test_kali_fidelity.py is a live integration test; requires a running NotTheNet
# instance and is not suitable for automated CI.
addopts = "--ignore=tests/test_kali_fidelity.py"
